# wordle

./: .gitignore  Cargo.toml  HONOR-CODE.md  README.md  build.sh  index.html
src/: args.rs  game.rs  main.rs  utils.rs  web_app.rs  words.rs
static/: style.css
