[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
clap = { version = "3.2.17", features = ["derive"] }
rand = "=0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.143", features = ["derive"] }

wasm-bindgen = "0.2.82"
yew = "0.19"
web-sys = "0.3.59"
log = "0.4.17"
wasm-logger = "0.2.0"


[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"

[[bin]]
name = "wordle"
# when testing:
# path = "src/main.rs"
# when using trunk:
path = "src/web_app.rs"
